tests/baselines/reference/overloadsWithinClasses.errors.txt
==== tests/cases/compiler/overloadsWithinClasses.ts (1 errors) ====
    class foo {
     
        static fnOverload( ) {}
     
        static fnOverload(foo: string){ } // error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! overloadsWithinClasses.ts(5,5): error TS2000: Duplicate identifier 'fnOverload'. Additional locations:
!!! 	overloadsWithinClasses.ts(3,5)
     
    }
    
    class bar {
     
        static fnOverload( );
     
        static fnOverload(foo?: string){ } // no error
     
    }
    
    class X {
       public attr(name:string):string;
       public attr(name:string, value:string):X;
       public attr(first:any, second?:any):any {
       }
    }
    